[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sacrifice_location/sacrifice_location.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 6, 0.01, 8 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.517647, 0.517647, 0.517647, 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.87451, 0.227451, 0.227451, 1 )

[sub_resource type="QuadMesh" id=4]
material = SubResource( 3 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.454644, 0.0142178, 0.453687 )

[sub_resource type="QuadMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.309804, 0.341176, 0.776471, 1 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.455, 0.014, 0.454 )

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0.980392, 0.843137, 0.223529, 1 )

[sub_resource type="CapsuleMesh" id=9]
material = SubResource( 10 )
radius = 0.4
mid_height = 0.001
radial_segments = 61

[node name="sacrifice_location" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000866532, -0.00209808, 0.00696051 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, -0.02, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 8.33821e-08, -2.62711e-08, 0, 0.300506, 0.95378, 8.74228e-08, 0.95378, -0.300506, 0, 2.877, -1.13314 )

[node name="cell_from" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.01, 0, 0, 0, 1, 0.6, 0, 1 )

[node name="MeshInstance" type="MeshInstance" parent="cell_from"]
transform = Transform( 0.9, 0, 0, 0, -3.93403e-08, 1, 0, -0.9, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="Area_1" type="Area" parent="cell_from"]

[node name="CollisionShape" type="CollisionShape" parent="cell_from/Area_1"]
shape = SubResource( 5 )

[node name="cell_to" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.01, 0, 0, 0, 1, -0.6, 0, 1 )

[node name="MeshInstance" type="MeshInstance" parent="cell_to"]
transform = Transform( 0.9, 0, 0, 0, -3.93403e-08, 1, 0, -0.9, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="Area_2" type="Area" parent="cell_to"]

[node name="CollisionShape" type="CollisionShape" parent="cell_to/Area_2"]
shape = SubResource( 8 )

[node name="deck" type="Spatial" parent="."]

[node name="reference_frame_card" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.8, 0, -1.3 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.97997, -0.100362, 0 )
mesh = SubResource( 9 )
material/0 = null

[node name="Button" type="Button" parent="."]
margin_left = 21.0
margin_top = 18.0
margin_right = 119.0
margin_bottom = 72.0
text = "Sacrifice"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="cell_from/Area_1" to="." method="_on_Area_1_input_event"]
[connection signal="input_event" from="cell_to/Area_2" to="." method="_on_Area_2_input_event"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
